--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "胡汉三",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.4.1"
+    "ejs": "^2.5.7",
+    "fs": "0.0.1-security",
+    "koa": "^2.4.1",
+    "koa-bodyparser": "^3.2.0",
+    "koa-router": "^7.3.0",
+    "koa-static": "^4.0.2",
+    "koa-views": "^6.1.3"
   }
 }
