--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "胡汉三",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^0.2.14",
     "ejs": "^2.5.7",
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
@@ -17,5 +18,10 @@
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "supertest": "^3.0.0"
   }
 }
