--- a/package.json
+++ b/package.json
@@ -11,29 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "busboy": "^0.2.14",
+    "co-busboy": "^1.4.0",
     "ejs": "^2.5.7",
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "koa-webpack-dev-middleware": "^2.0.2",
-    "koa-webpack-hot-middleware": "^1.0.3",
     "mocha": "^5.0.0",
     "supertest": "^3.0.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0"
-    "ejs": "^2.5.7",
-    "fs": "0.0.1-security",
-    "koa": "^2.4.1",
-    "koa-bodyparser": "^3.2.0",
-    "koa-router": "^7.3.0",
-    "koa-static": "^4.0.2",
-    "koa-views": "^6.1.3"
+    "webpack": "^3.10.0"
   }
 }
